[metadata]
name = easyib
version = 0.2.3
author = ashpipe
author_email = ashedpipe@gmail.com
description = Python wrapper for Interactive Brokers Client Portal Web API
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = REST, Interactive Brokers, Client Portal API
url = https://github.com/ashpipe/easyib
project_urls =
    Bug Tracker = https://github.com/ashpipe/easyib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src 
packages = find:
python_requires = >=3.6
install_requires = 
    requests

[options.packages.find]
where = src 
